@@ -12,7 +12,7 @@ jspwiki.pageProvider = com.ecyrd.jspwiki.FileSystemProvider
 #
 #  Determines where wiki files are kept.
 #
-jspwiki.fileSystemProvider.pageDir = /tmp/
+jspwiki.fileSystemProvider.pageDir = c:\\tmp\\
 
 #
 #  Special page references.
@@ -64,7 +64,7 @@ jspwiki.translatorReader.inlinePattern.3 = http://images.com/*
 log4j.appender.FileLog = org.apache.log4j.RollingFileAppender
 log4j.appender.FileLog.MaxFileSize    = 10MB
 log4j.appender.FileLog.MaxBackupIndex = 14
-log4j.appender.FileLog.File = /tmp/jspwikitests.log
+log4j.appender.FileLog.File = c:\\tmp\\jspwikitests.log
 log4j.appender.FileLog.layout = org.apache.log4j.PatternLayout
 log4j.appender.FileLog.layout.ConversionPattern=%d [%t] %p %c %x - %m%n
 
